[package]
name = "utilz-server"
version = "0.1.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_cors = "0.5"
base64 = "*"

[dependencies.maud]
version = "*"
features = ["rocket"]